deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: common-app-base
  labels:
    app.kubernetes.io/name: common-app-base
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: common-app-base
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
